src/jellyfin/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-svc
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8096
    - name: https
      port: 443
      targetPort: 8920
  selector:
    app: jellyfin-app
